--- a/rottenMovies/src/main/resources/templates/user.html
+++ b/rottenMovies/src/main/resources/templates/user.html
@@ -30,9 +30,11 @@
                     <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Links</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Login</a></li>
-                            <li><a href="#" class="text-white">Home</a></li>
-                            <li><a href="#" class="text-white">About</a></li>
+                            <li><a href="/login" class="text-white">Login</a></li>
+                            <li><a href="/" class="text-white">Home</a></li>
+                            <li th:if="${!(credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO')}"th:text="|Hi ${credentials.username}|"></li>
+                            <li th:if="${credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO'}"><a th:href="'/admin-panel'">Admin panel</a></li>
+                            <li><a href="/logout" class="text-white">Logout</a></li>
                         </ul>
                     </div>
                 </div>
