--- a/rottenMovies/src/main/resources/templates/feed.html
+++ b/rottenMovies/src/main/resources/templates/feed.html
@@ -44,7 +44,7 @@
     <div th:each="review:${feed}">
         <div class="row">
             <b class="col mx-2" th:text="${review.movieTitle}">Movie</b>
-            <a th:text="${review.criticName}" th:href="'/user/'+ ${review.id}">username</a>
+            <a class="col mx-2" th:text="${review.criticName}" th:href="'/user/'+ ${review.criticId}">username</a>
             <div class="p-1 mb-4 rounded-3 shadow-sm bg-opacity-10" th:classappend="${review.freshness}?'bg-success':'bg-danger'">
                 <div class="row align-item-between py-2">
                     <div class="col-6 mx-4" th:text="${review.content}?|“${review.content}”|:''">contenuto lungo contenuto lungo contenuto lungocontenuto lungo contenuto lungo</div>
