--- a/rottenMovies/src/main/resources/templates/user.html
+++ b/rottenMovies/src/main/resources/templates/user.html
@@ -32,11 +32,13 @@
                         <ul class="list-unstyled">
                             <li><a href="/login" class="text-white">Login</a></li>
                             <li><a href="/" class="text-white">Home</a></li>
-                            <li th:if="${!(credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO')}">
-                                <a th:href="|/user/${credentials.id}|">Your profile</a>
-                            </li>
-                            <li th:if="${credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO'}"><a th:href="'/admin-panel'">Admin panel</a></li>
-                            <li><a href="/logout" class="text-white">Logout</a></li>
+                            <div th:if="${credentials}">
+                                <li th:if="${!(credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO')}" >
+                                    <a th:href="|/user/${credentials.id}|">Your profile</a>
+                                </li>
+                                <li th:if="${credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO'}"><a th:href="'/admin-panel'">Admin panel</a></li>
+                                <li><a href="/logout" class="text-white">Logout</a></li>
+                            </div>
                         </ul>
                     </div>
                 </div>
